# OrthoEvolution

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  Aqua.txt  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  Clustophy.py  ISSUE_TEMPLATE.rst  LICENSE  MANIFEST.in  Naming_conventions.md  PULL_REQUEST_TEMPLATE.md  README.ftp  README.md  README.rst  SUMMARY.md  blasting test.py  blasting_test.py  flask_test.py  index.html  missingORduplicate.py  phylogenetics.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tester.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
Archive/: Clustophy.py  GBK2TREE.py  GetBlastDB.py  README.md  blasting_test.py  dataviz.py  dir_mana.py  dir_mana2.py  filter.py  ftp2db.py  genbank_mana.py  lister.md  mana.py  missingORduplicate.py
Archive/BlastSetup/: README.txt
Archive/BlastnScript/: blastn_to_csv.pbs  blastn_to_csv.py
Archive/Genbank/: db2gbk.py  gbk_mana.py
Archive/MyGene/: MyGene2CSV.py  README.txt  finalinfo.csv  master_accessions_list.csv
Archive/OtherPandas/: CleanCSV.py
Archive/Pandas/: Organisms.csv
Archive/blast/: CreateGILists.py  OrthoBLAST.py  get_gi_lists.py  get_gilists.pbs  get_tax_ids.py
Archive/shiny/: shinydir_mana.py  shinylookup.py
Archive/utils/: dir_mana.py  proj_mana.py
Cookies/new_project/: cookiecutter.json
Cookies/new_repository/: cookiecutter.json
Datasnakes/: README.md  __init__.py
Docs/: README.md  convertdocs.py  createdocs.py  docs.cfg  phylogenetics.md  test.py
Examples/: Gene2Paml.py  README.md
Manager/: README.md  TODO.py  proj_mana.py
OrthoEvol/: README.md  __init__.py  utilities.py
Orthologs/: README.md  __init__.py  blasting test.py
Tests/: README.md  full_test.py  orthologs_test.py  test_flask.py  test_manager.py  test_orthologs.py  test_pipeline.py  test_tools.py
Tools/: README.md
archive/: Clustophy.py  example_BioSQL_table.csv  example_BioSQL_table2.csv  mana.py
biosql/: README.md  biosqldb-sqlite.sql
blast/: OrthoBLAST.py  get_tax_ids.py
blast_ftp/: ftpdownloadtest.py
classes/: GBK2TREE.py  dataviz.py  dir_mana.py  ftp2dbCopy.py  proj_mana.py  shinydir_mana.py
datasnakes/: .gitignore  .travis.yml  MANIFEST.in  __init__.py
docs/: Makefile  README.md  createdocs.py  docs.cfg  requirements-docs.txt  update_docs.py
ftp/: ftp2db.py
manager/: BLASTingTemplate.py  blast_analysis.py  dir_mana.py  lister.py  ortho_analysis.py
pandoc/: docx_to_md.sh
phylogenetic_analyses/: phyml2paml.py
tests/: README.md  test_cookies.py  test_manager.py  test_orthologs.py  test_pipeline.py  test_tools.py  test_utils.py
(+1336 files in other folders)
